css/styles.css
* {
  cursor: default;
}

.background-image-wrapper {
  background: #222;
  /*background: #FDFDFD;*/
}

.page-container {
  height: 100vh;
  width: 100%;
 /* background-color: #2e3842;*/
  /*position: absolute;*/
}

.flip-over {
  z-index: 3;
  position: fixed;
  height: 100vh;
  width: 6vw;
  /*background-color: green;*/
  cursor: pointer;
}

#left {
  left: 0;
}

#right{
  right: 0;
}

/* ################################################################## */
/* ################################################################## */

.front-side-wrapper {
  background-color: #2e3842;
  position: fixed;
  border: 5px solid #FAFAFA;
  height: 90%;
  width: 90%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -webkit-transform: translate(-50%, -50%);
  box-shadow: 0px 20px 40px black;

}

.front-header-container {
  position: absolute;
  /*border: 2px solid #222;*/
  text-align: center;
  top: 45%;
  left: 50%;
  width: 90vw;
  transform: translate(-50%, -45%);
}

.front-header {
  font-size: 12vw;
  font-family: 'Oswald';
  color: #FDFDFD;
  /*display: none;*/
}

.front-header > span {
  cursor: pointer;
}

.front-subheader {
  font-size: 5vh;
  color: #7F1637;
  font-family: 'Merriweather';
  -webkit-animation-duration: .8s !important;
  -webkit-animation-delay: 0s;
  /*-webkit-animation-iteration-count: infinite;*/
}

/* ################################################################## */
/* ################################################################## */

.back-side-wrapper {
  display: none;
  background-color: #2e3842;
  position: fixed;
  border: 5px solid #FAFAFA;
  height: 90%;
  width: 90%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -webkit-transform: translate(-50%, -50%);
  box-shadow: 0px 20px 40px black;
}

